--- a/building-cs.html
+++ b/building-cs.html
@@ -134,7 +134,8 @@
       transform: translateY(-2px);
       box-shadow: 0 6px 16px rgba(0,0,0,0.1);
     }
-  </style>
+</style>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- image header with back button -->
