--- a/buildings.html
+++ b/buildings.html
@@ -172,14 +172,16 @@
     }
   }
 </style>
+<link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body data-page="buildings">
 
   <!-- header (matching screenshot) -->
   <header class="topbar">
     <div class="topbar-row">
       <button class="back-circle" onclick="window.location.href='index.html'" aria-label="رجوع">⟵</button>
-      <h1 class="topbar-title">المباني</h1>
+      <h1 id="pageTitle" class="topbar-title">المباني</h1>
+          
     </div>
     <div class="header-search" role="search" aria-label="بحث">
       <div class="search-bar">
@@ -286,5 +288,6 @@
     searchInput.focus();
   });
 </script>
+<script src="app.js"></script>
 </body>
 </html>
