--- a/discover.html
+++ b/discover.html
@@ -143,14 +143,15 @@
     .grid{ padding:0 12px 40px; gap:10px; }
   }
 </style>
+<link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body data-page="discover">
 
   <!-- header -->
   <header class="header">
     <div class="header-left">
       <a href="index.html" style="color:inherit; text-decoration:none; display:flex; align-items:center; gap:10px;">
-        <div class="title">اكتشف</div>
+        <div id="pageTitle" class="title">اكتشف</div>
       </a>
     </div>
     <div class="header-right">
@@ -249,5 +250,6 @@
     });
   });
 </script>
+<script src="app.js"></script>
 </body>
 </html>
