--- a/labs.html
+++ b/labs.html
@@ -54,15 +54,17 @@
           80% { transform: translateY(0); }
         }
         .empty-state-text { font-size: 16px; color:#555; }
-    </style>
+</style>
+<link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body data-page="labs">
 
     <!-- header (matching screenshot) -->
     <header class="topbar">
       <div class="topbar-row">
         <button class="back-circle" onclick="window.location.href='index.html'" aria-label="رجوع">⟵</button>
-        <h1 class="topbar-title">المعامل</h1>
+        <h1 id="pageTitle" class="topbar-title">المعامل</h1>
+          
       </div>
       <div class="header-search" role="search" aria-label="بحث">
         <div class="search-bar">
@@ -114,6 +116,7 @@
         alert('بحث عن: '+q);
       });
     </script>
+    <script src="app.js"></script>
 
 </body>
 </html>
