--- a/playground-details.html
+++ b/playground-details.html
@@ -147,8 +147,9 @@
     width: calc(100% - 40px);
   }
 </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body data-page="playgroundDetails">
 
   <!-- header -->
   <header class="header">
@@ -195,5 +196,6 @@
     </div>
   </main>
 
+<script src="app.js"></script>
 </body>
 </html>
