--- a/recreation-areas.html
+++ b/recreation-areas.html
@@ -212,14 +212,16 @@
     }
   }
 </style>
+<link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body data-page="recreationAreas">
 
   <!-- header -->
   <header class="topbar">
     <div class="topbar-row">
       <button class="back-circle" onclick="window.location.href='index.html'" aria-label="رجوع">⟵</button>
-      <h1 class="topbar-title">مناطق الترفيه</h1>
+      <h1 id="pageTitle" class="topbar-title">مناطق الترفيه</h1>
+      
     </div>
     <div class="header-search" role="search" aria-label="بحث">
       <div class="search-bar">
@@ -279,6 +281,7 @@
           searchInput.focus();
         });
     </script>
+    <script src="app.js"></script>
 
 </body>
 </html>
