--- a/services.html
+++ b/services.html
@@ -179,14 +179,16 @@
     }
   }
 </style>
+<link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body data-page="services">
 
   <!-- header (matching screenshot) -->
   <header class="topbar">
     <div class="topbar-row">
       <button class="back-circle" onclick="window.location.href='index.html'" aria-label="رجوع">⟵</button>
-      <h1 class="topbar-title">الخدمات</h1>
+      <h1 id="pageTitle" class="topbar-title">الخدمات</h1>
+          
     </div>
     <div class="header-search" role="search" aria-label="بحث">
       <div class="search-bar">
@@ -218,7 +220,7 @@
         </div>
       </div>
 
-    </section>
+  </section>
 
   </main>
 
@@ -260,5 +262,6 @@
     searchInput.focus();
   });
 </script>
+<script src="app.js"></script>
 </body>
 </html>
