--- a/building-cs.html
+++ b/building-cs.html
@@ -137,7 +137,7 @@
 </style>
 <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body data-page="buildingCs">
   <!-- image header with back button -->
   <div class="image-header">
     <img src="photo_2025-11-06_21-15-05.jpg" alt="مبنى علوم الحاسب" class="header-image">
@@ -160,6 +160,6 @@
     <a href="#" id="openMapBtn" class="action-button">افتح الموقع في الخريطة</a>
     </div>
   
+<script src="app.js"></script>
 </body>
-</html>
 </html>
