--- a/building-details.html
+++ b/building-details.html
@@ -246,11 +246,7 @@
     }
   });
   
-  // زر فتح الموقع في الخريطة
-  document.getElementById('openMapBtn').addEventListener('click', () => {
-    // هنا يمكن إضافة رابط لخريطة حقيقية أو تطبيق خرائط
-    alert('سيتم فتح الموقع في الخريطة قريباً');
-  });
+  // زر فتح الموقع في الخريطة — يُدار الآن من app.js بشكل موحّد
 </script>
 <script src="app.js"></script>
 </body>
